--- a/mdagenerator/src/main/resources/com/soffid/mda/style.css
+++ b/mdagenerator/src/main/resources/com/soffid/mda/style.css
@@ -19,7 +19,8 @@ ul.navigation li {
   background: white;
   margin: 0.5em 0;
   padding: 0.3em;
-  border-right: 1em solid black }
+}
+
 ul.navigation a {
   text-decoration: none }
 a:link {
